# PulseViewTrunk

./: .gitmodules  CMakeLists.txt  readme.md
src/: main.cpp  pulseviewtrunk.cpp  pulseviewtrunk.h
src/detail/: digitaldevice.cpp  digitaldevice.h  scopylogicsignal.cpp  scopylogicsignal.hpp  scopymainwindow.cpp  scopymainwindow.hpp  scopysession.cpp  scopysession.hpp  scopysignal.cpp  scopysignal.hpp  scopyview.cpp  scopyview.hpp
ui/: pulseviewtrunk.ui
